--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hubert-demo-app",
-  "version": "2.1.1",
+  "version": "2.2.0-0",
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
